# boboy

./: README.md  boboy.c  cart.c  cpu.c  gpu.c  mem.c  meson.build  sdl.c  timer.c
include/: cart.h  common.h  cpu.h  gpu.h  irq.h  mem.h  sdl.h  timer.h
src/: boboy.c  cart.c  cpu.c  gpu.c  irq.c  mem.c  sdl.c  timer.c
test/: meson.build
test/unit_tests/: meson.build  test1.c  test1_runner.c
